toolchain/internal/core/analysis/testdata/errors/rpcs/duplicate_stream.ufo
// @expect: E502

rpc Users {
	stream UserUpdates {
		input { id: string }
		output { event: string }
	}
	stream UserUpdates {
		input { userId: string }
		output { data: string }
	}
}
